# knowling

./: .gitignore  LICENSE.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: main.yml
doc/img/: kn.logo.afdesign
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/nova_notes/: all.html  fn.greet.html  fn.main.html  index.html  sidebar-items.js
docs/nova_notes/commands/: fn.get_notes.html  fn.save_note.html  index.html  sidebar-items.js
docs/nova_notes/notebook/: enum.NotebookError.html  index.html  sidebar-items.js  struct.Notebook.html
docs/nova_notes/notebook/db/: constant.COLUMN_EMBEDDINGS.html  constant.COLUMN_ID.html  constant.COLUMN_TEXT.html  constant.DB_DIR.html  constant.DB_NAME.html  constant.EMBEDDING_DIMENSIONS.html  constant.TABLE_NAME.html  enum.EmbedStoreError.html  index.html  sidebar-items.js  struct.Document.html  struct.EmbedStore.html
docs/nova_notes/notebook/note/: index.html  sidebar-items.js  type.Note.html
docs/src/nova_notes/: commands.rs.html  main.rs.html  notebook.rs.html
docs/src/nova_notes/notebook/: db.rs.html  note.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/convert/: trait.From.js
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/serde/ser/: trait.Serialize.js
docs/type.impl/nova_notes/notebook/db/: struct.Document.js
scripts/: version-bump.sh
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  llm.rs  main.rs  notebook.rs  utils.rs
src-tauri/src/notebook/: db.rs  note.rs  notebook_repository.rs
src/components/: AppHeader.vue  Editor.vue  EditorToolbar.vue  LlmPrompting.vue  MilkdownEditor.vue  MilkdownEditorWrapper.vue  MilkdownEditorWrapper__Deprecated.vue  MilkdownEditor__Deprecated.vue  QuillEditor.vue  SideBar.vue  Sidebar.vue  ToolTip.vue
src/lib/: DateUtils.js  notebook.js  utils.js
src/router/: index.js
src/views/: Admin.vue  Editor.vue  MdTest.vue  NotesList.vue  Settings.vue
tests/unit/: DateUtils.spec.js
