[package]
name = "knowling"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1", features = ["path-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

lancedb = "0.4.17"
tokio = "1.36.0"
futures = "0.3.30"
arrow-array = "50.0.0"
arrow-schema = "50.0.0"
fastembed = "3.1.1"
anyhow = "1.0.79"
rand = "0.8.5"
chrono = "0.4.37"
dirs = "5.0.1"
llm-api-adapter = { git = "https://github.com/samkeen/llm-api-adapter", branch = "main" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
