[package]
name = "knowling"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1", features = ["path-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = "1.36.0"
futures = "0.3.30"
fastembed = "3.1.1"
rand = "0.8.5"
chrono = "0.4.37"
dirs = "5.0.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0.59"
vec-embed-store = "0.3.0"
uuid = { version = "1.8.0", features = ["v4"] }
llm-bridge = "0.1.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
